# covid-analysis

./: pyproject.toml  reshaped_covid.csv  reshaped_covid_states.csv  states.json
