[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Nate Kresge <nate@picnichealth.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
